リリース構成のやり直し

--- a/vreco-project/firebase.json
+++ b/vreco-project/firebase.json
@@ -8,8 +8,8 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**",
-      "js",
-      "css/bootstrap-ignore"
+      "public/css/bootstrap-ignore",
+      "public/js"
     ],
     "rewrites": [
       {
